# botc-player

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
scripts/: docker-audio-setup.sh  docker-entrypoint.sh  setup_audio_macos.sh
src/botc_player/: __init__.py  config.py  join.py  main.py  orchestrator.py
src/botc_player/agent/: __init__.py  brain.py  etiquette.py  game_state.py  prompts.py
src/botc_player/audio/: __init__.py  devices.py  pitch.py  stt.py  tts.py
src/botc_player/browser/: __init__.py  actions.py  botc_client.py  media_inject.js
src/botc_player/knowledge/: __init__.py  botc_rules.md  roles.py  strategy.py
src/botc_player/ui/: __init__.py  app.py
src/botc_player/vision/: __init__.py  face.py  frame_server.py  virtual_cam.py  y4m.py
tests/: test_lobby_lock.py  test_lobby_url.py  test_pitch.py  test_strategy.py  test_take_seat_command.py  test_y4m.py
